--- a/src/css/GameBoy1.css
+++ b/src/css/GameBoy1.css
@@ -29,19 +29,20 @@
 .gameboy__upperhalf {
 	margin-top: 3rem;
 	height: 50%;
-	width: auto;
+	width: 85%;
 }
 .gameboy__lowerhalf {
+	margin-top: 10%;
 	height: 50%;
-	width: auto;
+	width: 85%;
 	display: flex;
+	flex-direction: row;
 }
 .gameboy__display__wrapper {
 	width: 500px; /* change later with media query */
 	border-radius: 35px;
 	border-bottom-right-radius: 90px;
 	box-shadow: inset 0 0 10px rgb(68, 66, 66);
-
 	height: 100%;
 	background-color: gray;
 	display: flex;
@@ -49,7 +50,7 @@
 	justify-content: center;
 }
 .gameboy__display__circle {
-	width: 4%;
+	width: 3%;
 	margin: 0px;
 	background-color: rgb(43, 41, 41);
 	border-radius: 50%;
@@ -58,6 +59,33 @@
 	margin: 0 15px; /* if bugs with circle change 15 to auto */
 	height: 80%;
 	width: 75%;
+	border: 5px solid;
+	border-color: rgb(102, 99, 99) rgb(179, 175, 175) rgb(179, 175, 175)
+		rgb(102, 99, 99);
+	display: flex;
+	align-content: center;
+	justify-content: center;
+}
+.gameboy__start__borderwrapper {
+	margin-top: 10px;
+	border: 5px solid;
+	border-color: rgb(102, 99, 99) rgb(179, 175, 175) rgb(179, 175, 175)
+		rgb(102, 99, 99);
+	display: flex;
+	align-content: center;
+	justify-content: center;
+}
+.gameboy__restart__borderwrapper {
+	margin-top: 10px;
+	border: 5px solid;
+	border-color: rgb(102, 99, 99) rgb(179, 175, 175) rgb(179, 175, 175)
+		rgb(102, 99, 99);
+	display: flex;
+	align-content: center;
+	justify-content: center;
+}
+.gameboy__pause__borderwrapper {
+	margin-top: 10px;
 	border: 5px solid;
 	border-color: rgb(102, 99, 99) rgb(179, 175, 175) rgb(179, 175, 175)
 		rgb(102, 99, 99);
@@ -77,26 +105,141 @@
 	height: 100%;
 	width: 50%;
 }
+.gameboy__lowerhalf__left__top {
+	height: 25%;
+}
+.gameboy__lowerhalf__left__bottom {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 75%;
+}
+.gameboy__start__wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.gameboy__restart__wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.gameboy__buttons {
+	display: flex;
+	justify-content: space-evenly;
+}
 .gameboy__start {
 	cursor: pointer;
-	width: 10%;
-	height: 12%;
-	box-shadow: 1px 1px 1px rgb(0 0 0 / 20%);
-	background-color: green;
+	width: 40px;
+	height: 40px;
+	box-shadow: inset 0px -3px 2px black;
 	border: 1px solid black;
+	background-color: rgb(5, 170, 5);
 	border-radius: 50%;
 }
 
+.gameboy__start__label {
+	width: 100%;
+	padding: 5px 10px 5px 10px;
+	background-color: rgb(89, 153, 29);
+	color: black;
+	border-width: 2px;
+	border-style: solid;
+	border-color: #494536;
+	text-align: center;
+	font-size: 1.4rem;
+}
+
+.gameboy__restart__label {
+	width: 100%;
+	padding: 5px 10px 5px 10px;
+	background-color: rgb(89, 153, 29);
+	color: black;
+	border-width: 2px;
+	border-style: solid;
+	border-color: #494536;
+	text-align: center;
+	font-size: 1.35rem;
+}
+
+.gameboy__pause__label {
+	width: 100%;
+	padding: 5px 10px 5px 10px;
+	background-color: rgb(89, 153, 29);
+	color: black;
+	border-width: 2px;
+	border-style: solid;
+	border-color: #494536;
+	text-align: center;
+	font-size: 1.35rem;
+}
+
 .gameboy__start:hover {
-	background-color: #3e8e41;
+	background-color: rgb(58, 155, 58);
 }
 
 .gameboy__start:active {
-	background-color: #3e8e41;
-	box-shadow: 0 5px #666;
-	transform: translateY(4px);
+	background-color: rgb(58, 155, 58);
+	outline: 0;
+	box-shadow: inset 0 3px 2px rgb(0 0 0 / 80%);
 }
 
+.gameboy__restart {
+	cursor: pointer;
+	width: 40px;
+	height: 40px;
+	box-shadow: inset 0px -3px 2px black;
+
+	border: 1px solid black;
+	background-color: rgb(170, 5, 5);
+	border-radius: 50%;
+}
+
+.gameboy__restart:hover {
+	background-color: rgb(194, 30, 30);
+}
+
+.gameboy__restart:active {
+	background-color: rgb(194, 30, 30);
+	outline: 0;
+	box-shadow: inset 0 3px 2px rgb(0 0 0 / 80%);
+}
+.gameboy__pause__wrapper {
+	height: 75%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.gameboy__pause {
+	cursor: pointer;
+	width: 75%;
+	height: 75%;
+	box-shadow: inset 0px -5px 5px black;
+
+	border: 1px solid black;
+	background-color: rgb(170, 5, 5);
+	border-radius: 50%;
+}
+
+.gameboy__pause:hover {
+	background-color: rgb(194, 30, 30);
+}
+
+.gameboy__pause:active {
+	background-color: rgb(194, 30, 30);
+	outline: 0;
+	box-shadow: inset 0 10px 5px rgb(0 0 0 / 80%);
+}
+*:focus {
+	outline: 0;
+}
 .gameboy__lowerhalf__right {
 	height: 100%;
 	width: 50%;
