--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,50 @@
 @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 .App {
 	font-family: "VT323", monospace;
-	background-color: #282c34;
+	background: #63856a; /* Old browsers */
+	background: -moz-radial-gradient(
+		center,
+		ellipse cover,
+		#63856a 1%,
+		#3c5a40 100%
+	); /* FF3.6+ */
+	background: -webkit-gradient(
+		radial,
+		center center,
+		0px,
+		center center,
+		100%,
+		color-stop(1%, #63856a),
+		color-stop(100%, #3c5a40)
+	); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(
+		center,
+		ellipse cover,
+		#63856a 1%,
+		#3c5a40 100%
+	); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(
+		center,
+		ellipse cover,
+		#63856a 1%,
+		#3c5a40 100%
+	); /* Opera 12+ */
+	background: -ms-radial-gradient(
+		center,
+		ellipse cover,
+		#63856a 1%,
+		#3c5a40 100%
+	); /* IE10+ */
+	background: radial-gradient(
+		ellipse at center,
+		#63856a 1%,
+		#3c5a40 100%
+	); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#63856a', endColorstr='#3c5a40',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
 	min-height: 100vh;
 	color: white;
 	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
 }
