--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -1,12 +1,12 @@
 .gameboy__outer__shell {
-	height: 100vh;
+	height: 90vh;
 	background-color: rgb(116, 117, 113);
 	border-radius: 35px;
 	border-bottom-right-radius: 90px;
 	-moz-box-shadow: inset 0 0 10px rgb(209, 194, 194);
 	-webkit-box-shadow: inset 0 0 10px rgb(209, 194, 194);
 	box-shadow: inset 0 0 10px rgb(209, 194, 194);
-	width: 600px; /* change later with media query */
+	width: 30vw; /* change later with media query */
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -19,6 +19,8 @@
 }
 
 .gameboy__inner__shell {
+	z-index: 1;
+
 	height: 98%;
 	width: 97%;
 	background-color: rgb(180, 184, 176);
@@ -45,7 +47,7 @@
 	flex-direction: row;
 }
 .gameboy__display__wrapper {
-	width: 500px; /* change later with media query */
+	width: 100%;
 	border-radius: 35px;
 	border-bottom-right-radius: 90px;
 	box-shadow: inset 0 0 10px rgb(68, 66, 66);
@@ -64,7 +66,7 @@
 .gameboy__display__borderwrapper {
 	margin: 0 15px; /* if bugs with circle change 15 to auto */
 	height: 80%;
-	width: 75%;
+	width: 70%;
 	border: 5px solid;
 	border-color: rgb(102, 99, 99) rgb(179, 175, 175) rgb(179, 175, 175)
 		rgb(102, 99, 99);
@@ -225,8 +227,8 @@
 }
 .gameboy__pause {
 	cursor: pointer;
-	width: 75%;
-	height: 75%;
+	width: 73%;
+	height: 100%;
 	box-shadow: inset 0px -5px 5px black;
 
 	border: 1px solid black;
