--- a/src/css/Notepad.css
+++ b/src/css/Notepad.css
@@ -1,4 +1,6 @@
 .notepad__wrapper {
+	z-index: 8 !important;
+
 	background-color: rgb(254, 243, 136);
 	color: black;
 	height: 80vh;
@@ -57,7 +59,7 @@
 }
 .line {
 	padding-left: 13%;
-	height: 5%;
+	height: 7%;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -66,4 +68,106 @@
 	border-color: rgb(12, 180, 180);
 	border-style: solid;
 	font-size: 1.5rem;
+}
+.keycap {
+	display: -moz-inline-stack;
+	display: inline-block;
+	vertical-align: top;
+	zoom: 1;
+	*display: inline;
+
+	width: 4vmin;
+	height: 4vmin;
+	position: relative;
+	z-index: 1;
+
+	margin: 0.5vmin;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	background: #aaaaaa;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+}
+.keycap span {
+	position: absolute;
+	top: 13%;
+}
+.keycap:before {
+	content: "";
+
+	position: absolute;
+	top: 0.5vmin;
+	bottom: 1vmin;
+	right: 1vmin;
+	left: 1vmin;
+
+	z-index: -1;
+
+	background: #cccccc;
+	border: 1px solid rgba(255, 255, 255, 0.1);
+
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 2px;
+}
+
+.keycap .right {
+	padding-top: 7%;
+
+	-webkit-transform: rotate(90deg);
+	-moz-transform: rotate(90deg);
+	transform: rotate(90deg);
+}
+
+.keycap .left {
+	padding-top: 7%;
+
+	-webkit-transform: rotate(-90deg);
+	-moz-transform: rotate(-90deg);
+	transform: rotate(-90deg);
+}
+
+.keycap .down {
+	-webkit-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	transform: rotate(180deg);
+}
+.img-tape {
+	text-align: center;
+	display: inline-block;
+	z-index: 2;
+	height: 100%;
+	width: 100%;
+}
+
+.img-tape:before,
+.img-tape:after {
+	background: rgba(255, 255, 235, 0.6);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+	content: "";
+	display: block;
+	height: 30px;
+	position: absolute;
+	margin: auto;
+	width: 100px;
+	z-index: 2;
+}
+
+.img-tape--3:before {
+	left: -20px;
+	top: 11px;
+	transform: rotate(-45deg);
+	z-index: 2;
+}
+
+.img-tape:after {
+	bottom: 11px;
+	right: -19px;
+	transform: rotate(-45deg);
+	z-index: 2;
 }
