--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -134,12 +134,357 @@
 	border-style: solid;
 	border-color: #494536;
 }
-.gameboy__display__top {
+.gameboy__display2 {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 98.8%;
+	width: 99%;
+	background-color: rgb(174, 196, 64);
+	border-width: 2px;
+	border-style: solid;
+	border-color: #494536;
+}
+.gameboy__display__inner {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+	background: rgb(174, 196, 64);
+	position: relative;
+}
+.gameboy__display__top__menu {
 	background: transparent;
 	width: 100%;
 	height: 75%;
 }
-.gameboy__display__bottom {
+.mountain__wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	width: 100%;
+	bottom: 0px;
+	height: 80%;
+	background: transparent;
+}
+.mountain1 {
+	background-color: rgb(82, 127, 57);
+
+	width: calc(2.17391304348% + 1px);
+	height: 50%;
+}
+.mountain2 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 54%;
+}
+.mountain3 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 60%;
+}
+.mountain4 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 65%;
+}
+.mountain5 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 60%;
+}
+.mountain6 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 54%;
+}
+.mountain7 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 49%;
+}
+.mountain8 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 55%;
+}
+.mountain9 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 61%;
+}
+.mountain10 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 65%;
+}
+.mountain11 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 70%;
+}
+.mountain12 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 73%;
+}
+.mountain13 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 75%;
+}
+.mountain14 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 80%;
+}
+.mountain15 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 84%;
+}
+.mountain16 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 88%;
+}
+.mountain17 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 84%;
+}
+.mountain18 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 82%;
+}
+.mountain19 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 77%;
+}
+.mountain20 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 71%;
+}
+.mountain21 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 65%;
+}
+.mountain22 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 60%;
+}
+.mountain23 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 56%;
+}
+.mountain24 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 52%;
+}
+.mountain25 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 49%;
+}
+.mountain26 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 50%;
+}
+.mountain27 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 54%;
+}
+.mountain28 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 58%;
+}
+.mountain29 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 65%;
+}
+.mountain30 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 72%;
+}
+.mountain31 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 75%;
+}
+.mountain32 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 81%;
+}
+.mountain33 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 86%;
+}
+.mountain34 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 90%;
+}
+.mountain35 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 95%;
+}
+.mountain36 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 99%;
+}
+.mountain37 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 95%;
+}
+.mountain38 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 90%;
+}
+.mountain39 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 85%;
+}
+.mountain40 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 80%;
+}
+.mountain41 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 74%;
+}
+.mountain42 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 68%;
+}
+.mountain43 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 65%;
+}
+.mountain44 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 62%;
+}
+.mountain45 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 55%;
+}
+.mountain46 {
+	background-color: rgb(82, 127, 57);
+
+	width: 2.17391304348%;
+	height: 52%;
+}
+.gameboy__display__bottom__menu {
+	background-color: rgb(32, 70, 49);
+	z-index: 2;
+
+	width: 100%;
+	height: 25%;
+}
+.gameboy__display__bottom__line1 {
+	background-color: rgb(32, 70, 49);
+	z-index: 2;
+
+	width: 100%;
+	margin: 1%;
+	height: 2%;
+}
+.gameboy__display__bottom__line2 {
+	background-color: rgb(32, 70, 49);
+	z-index: 2;
+
+	width: 100%;
+	margin: 1%;
+	height: 2%;
+}
+.gameboy__display__bottom__line3 {
+	background-color: rgb(32, 70, 49);
+	z-index: 2;
+
+	width: 100%;
+	margin: 1%;
+	margin-bottom: 2%;
+	height: 4%;
+}
+.gameboy__display__top__start {
+	background: transparent;
+	width: 100%;
+	height: 75%;
+}
+.gameboy__display__bottom__start {
 	background-color: rgb(89, 153, 29);
 	z-index: 2;
 	display: flex;
@@ -149,7 +494,33 @@
 	width: 100%;
 	height: 25%;
 }
+@keyframes blink {
+	50% {
+		opacity: 0;
+	}
+}
+@-webkit-keyframes blink {
+	50% {
+		opacity: 0;
+	}
+}
+.gameboy__time {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 1.5rem;
+}
+.timer__colon {
+	animation: blink 1.5s step-start 0s infinite;
+	-webkit-animation: blink 1.5s step-start 0s infinite;
+}
 
+.gameboy__timer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 1.5rem;
+}
 .gameboy__lowerhalf__left {
 	height: 100%;
 	width: 50%;
