--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -498,11 +498,29 @@
 	height: 52%;
 }
 .gameboy__display__bottom__menu {
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-end;
 	background-color: rgb(32, 70, 49);
 	z-index: 2;
-
 	width: 100%;
 	height: 25%;
+
+	-webkit-text-stroke: 0.7px rgb(82, 127, 57); /* width and color */
+}
+.year {
+	font-size: 2em;
+
+	margin: 3%;
+	margin-bottom: 1%;
+	justify-self: flex-end;
+	align-self: flex-end;
+}
+.year1 {
+	margin: 3%;
+	margin-bottom: 1%;
+	font-size: 2em;
+	transform: scale(2, 1);
 }
 .gameboy__display__bottom__line1 {
 	background-color: rgb(32, 70, 49);
@@ -650,7 +668,7 @@
 }
 
 .gameboy__start:hover {
-	background-color: rgb(58, 155, 58);
+	background-color: rgb(51, 184, 51);
 }
 
 .gameboy__start:active {
