--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -559,17 +559,23 @@
 	height: 75%;
 }
 .bullet__left {
+	margin: 0%;
+	margin-top: 0%;
 	width: 3.33%;
 	z-index: 1;
 	background-color: rgb(46, 27, 65);
 }
 
 .bullet__right {
+	margin: 0%;
+	margin-top: 0%;
 	width: 3.33%;
 	z-index: 1;
 	background-color: rgb(46, 27, 65);
 }
 .bullet__middle {
+	margin: 0%;
+	margin-top: 0%;
 	width: 3.33%;
 	z-index: 1;
 	background-color: rgb(46, 27, 65);
@@ -585,6 +591,14 @@
 	color: black;
 	width: 100%;
 	height: 25%;
+}
+#bullets__barrier {
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
+	height: 50%;
+	background: transparent;
+	z-index: 1;
 }
 @keyframes blink {
 	50% {
