--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -552,34 +552,14 @@
 	position: absolute;
 	top: 0px;
 	display: flex;
+	flex-direction: column;
 	justify-content: space-between;
 	align-items: flex-start;
 	background: transparent;
 	width: 100%;
 	height: 75%;
 }
-.bullet__left {
-	margin: 0%;
-	margin-top: 0%;
-	width: 3.33%;
-	z-index: 1;
-	background-color: rgb(46, 27, 65);
-}
 
-.bullet__right {
-	margin: 0%;
-	margin-top: 0%;
-	width: 3.33%;
-	z-index: 1;
-	background-color: rgb(46, 27, 65);
-}
-.bullet__middle {
-	margin: 0%;
-	margin-top: 0%;
-	width: 3.33%;
-	z-index: 1;
-	background-color: rgb(46, 27, 65);
-}
 .gameboy__display__bottom__start {
 	position: absolute;
 	bottom: 0px;
@@ -592,7 +572,7 @@
 	width: 100%;
 	height: 25%;
 }
-#bullets__barrier {
+.bullets__barrier {
 	position: absolute;
 	bottom: 0px;
 	width: 100%;
