--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -40,7 +40,7 @@
 }
 
 .gameboy__inner__shell {
-	z-index: 1;
+	z-index: 2;
 
 	height: 98%;
 	width: 97%;
@@ -49,13 +49,16 @@
 	border-bottom-right-radius: 90px;
 	-moz-box-shadow: inset 0 0 10px rgb(209, 194, 194);
 	-webkit-box-shadow: inset 0 0 10px rgb(209, 194, 194);
-	box-shadow: inset 0 0 10px rgb(209, 194, 194);
+	box-shadow: inset 0 0 30px rgb(126, 121, 121);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	border: 3px groove rgb(184, 175, 175);
 }
 
 .gameboy__upperhalf {
+	z-index: 2;
+
 	margin-top: 3rem;
 	height: 50%;
 	width: 85%;
@@ -68,15 +71,19 @@
 	flex-direction: row;
 }
 .gameboy__display__wrapper {
+	z-index: 2 !important;
 	width: 100%;
+	border: 3px groove rgb(134, 131, 131);
+
 	border-radius: 35px;
 	border-bottom-right-radius: 90px;
-	box-shadow: inset 0 0 10px rgb(68, 66, 66);
+	box-shadow: inset 0 0 40px rgb(68, 66, 66);
 	height: 100%;
 	background-color: gray;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	border: 3px groove rgb(134, 131, 131);
 }
 .gameboy__display__circle {
 	width: 5px;
@@ -133,6 +140,7 @@
 	width: 99%;
 	background-color: rgb(89, 153, 29);
 	border-width: 2px;
+
 	border-style: solid;
 	border-color: #494536;
 }
@@ -549,6 +557,7 @@
 	height: 4%;
 }
 .gameboy__display__top__start {
+	z-index: 1;
 	position: absolute;
 	top: 0px;
 	display: flex;
@@ -574,9 +583,9 @@
 }
 .bullets__barrier {
 	position: absolute;
-	bottom: 0px;
+	bottom: -30px;
 	width: 100%;
-	height: 50%;
+	height: 10%;
 	background: transparent;
 	z-index: 1;
 }
