--- a/src/css/Bullets.css
+++ b/src/css/Bullets.css
@@ -1,39 +1,40 @@
 .bullets__wrapper__row1 {
 	z-index: 1;
-
+	position: relative;
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
 	background: transparent;
 	width: 100%;
-	height: 75%;
+	height: 10%;
 }
 .bullets__wrapper__row2 {
 	z-index: 1;
+	position: relative;
 
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
 	background: transparent;
 	width: 100%;
-	height: 75%;
+	height: 10%;
 }
 .bullets__wrapper__row3 {
 	z-index: 1;
+	position: relative;
 
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
 	background: transparent;
 	width: 100%;
-	height: 75%;
+	height: 10%;
 }
 
 .bullet__left {
 	margin: 0%;
 	margin-top: 0%;
 	width: 3.33%;
-	z-index: 1;
 	background-color: rgb(46, 27, 65);
 }
 
@@ -41,13 +42,11 @@
 	margin: 0%;
 	margin-top: 0%;
 	width: 3.33%;
-	z-index: 1;
 	background-color: rgb(46, 27, 65);
 }
 .bullet__middle {
 	margin: 0%;
 	margin-top: 0%;
 	width: 3.33%;
-	z-index: 1;
 	background-color: rgb(46, 27, 65);
 }
