--- a/src/css/Chalk.css
+++ b/src/css/Chalk.css
@@ -2,7 +2,7 @@
 .chalk__wrapper {
 	font-family: "Give You Glory", cursive;
 	position: absolute;
-	z-index: 1;
+	z-index: 2 !important;
 	top: 0%;
 	left: 0%;
 	width: 100%;
@@ -54,7 +54,7 @@
 .chalk__heart {
 	top: 10%;
 	left: 5%;
-	z-index: 1;
+
 	position: absolute;
 	width: 6vw;
 	height: auto;
@@ -64,7 +64,7 @@
 	transform: rotate(20deg);
 	top: 8.5%;
 	left: 7%;
-	z-index: 1;
+
 	position: absolute;
 	width: 2vw;
 	height: auto;
@@ -73,7 +73,7 @@
 .chalk__equations {
 	top: 20%;
 	left: 45%;
-	z-index: 1;
+
 	position: absolute;
 
 	width: 15vw;
@@ -85,7 +85,7 @@
 	bottom: 20%;
 	left: 47%;
 	transform: rotate(-45deg);
-	z-index: 1;
+
 	position: absolute;
 	width: 7vw;
 	height: auto;
@@ -96,7 +96,7 @@
 	bottom: 35%;
 	transform: rotate(45deg);
 	right: 5%;
-	z-index: 1;
+
 	position: absolute;
 	width: 8vw;
 	height: auto;
@@ -105,7 +105,7 @@
 .chalk__math {
 	bottom: 10%;
 	left: 4%;
-	z-index: 1;
+
 	position: absolute;
 	width: 8vw;
 	height: auto;
@@ -114,7 +114,7 @@
 	bottom: 12%;
 	left: 4%;
 	opacity: 0.9;
-	z-index: 1;
+
 	position: absolute;
 	width: 8vw;
 	height: auto;
@@ -123,7 +123,7 @@
 	top: 17%;
 	opacity: 0.9;
 	left: 45%;
-	z-index: 1;
+
 	position: absolute;
 	transform: rotate(-1deg);
 	width: 9vw;
@@ -135,7 +135,7 @@
 	font-size: 2rem;
 	top: 35%;
 	left: 5%;
-	z-index: 1;
+
 	position: absolute;
 	width: 5vw;
 	height: auto;
@@ -147,7 +147,7 @@
 
 	top: 40%;
 	left: 5%;
-	z-index: 1;
+
 	position: absolute;
 	width: 5vw;
 	height: auto;
