--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -18,7 +18,8 @@
 	-moz-user-select: none; /* Old versions of Firefox */
 	-ms-user-select: none; /* Internet Explorer/Edge */
 	user-select: none;
-	z-index: 2;
+	position: relative;
+	z-index: 2 !important;
 }
 
 .gameboy__inner__shell {
@@ -34,10 +35,12 @@
 	flex-direction: column;
 	align-items: center;
 	border: 3px groove rgb(184, 175, 175);
+	position: relative;
+	z-index: 2 !important;
 }
 
 .gameboy__upperhalf {
-	z-index: 2;
+	position: relative;
 
 	margin-top: 3rem;
 	height: 50%;
@@ -51,7 +54,6 @@
 	flex-direction: row;
 }
 .gameboy__display__wrapper {
-	z-index: 2;
 	width: 100%;
 	border: 3px groove rgb(134, 131, 131);
 
@@ -542,8 +544,8 @@
 	height: 4%;
 }
 .gameboy__display__top__start {
-	z-index: 1;
 	position: absolute;
+
 	top: 0px;
 	display: flex;
 	flex-direction: column;
@@ -552,6 +554,11 @@
 	background: transparent;
 	width: 100%;
 	height: 75%;
+}
+
+.kay {
+	width: 100%;
+	background-color: red;
 }
 
 .gameboy__display__bottom__start {
@@ -568,12 +575,82 @@
 }
 .bullets__barrier {
 	position: absolute;
-	bottom: -30px;
+	bottom: -20%;
+	width: 100%;
+	height: 50%;
+	background: transparent;
+	z-index: 0;
+}
+.bullets__wrapper__row1 {
+	position: absolute;
+	top: 0px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	background: transparent;
 	width: 100%;
 	height: 10%;
-	background: transparent;
-	z-index: 1;
 }
+.bullets__wrapper__row2 {
+	position: absolute;
+	top: 0px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	background: transparent;
+	width: 100%;
+	height: 10%;
+}
+.bullets__wrapper__row3 {
+	position: absolute;
+	top: 0px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	background: transparent;
+	width: 100%;
+	height: 10%;
+}
+.bullets__wrapper__row4 {
+	position: absolute;
+	top: 0px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	background: transparent;
+	width: 100%;
+	height: 10%;
+}
+.bullets__wrapper__row5 {
+	position: absolute;
+	top: 0px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	background: transparent;
+	width: 100%;
+	height: 10%;
+}
+.bullet__left {
+	margin: 0%;
+	margin-top: 0%;
+	width: 3.33%;
+	background-color: rgb(46, 27, 65);
+}
+
+.bullet__right {
+	margin: 0%;
+	margin-top: 0%;
+	width: 3.33%;
+	background-color: rgb(46, 27, 65);
+}
+.bullet__middle {
+	margin: 0%;
+	margin-top: 0%;
+	width: 3.33%;
+	background-color: rgb(46, 27, 65);
+}
+
 @keyframes blink {
 	50% {
 		opacity: 0;
