deleted useless file, added outerspace background using p5

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 .App {
+	z-index: 8;
 	font-family: "VT323", monospace;
 	background: #63856a; /* Old browsers */
 	background: -moz-radial-gradient(
@@ -47,4 +48,9 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
+}
+
+.stars__wrapper {
+	position: absolute;
+	top: 1px;
 }
