--- a/src/css/Bullets.css
+++ b/src/css/Bullets.css
@@ -33,18 +33,18 @@
 	margin: 0%;
 	margin-top: 0%;
 	width: 3.33%;
-	background-color: rgb(46, 27, 65);
+	background-color: yellow;
 }
 
 .bullet__right {
 	margin: 0%;
 	margin-top: 0%;
 	width: 3.33%;
-	background-color: rgb(46, 27, 65);
+	background-color: yellow;
 }
 .bullet__middle {
 	margin: 0%;
 	margin-top: 0%;
 	width: 3.33%;
-	background-color: rgb(46, 27, 65);
+	background-color: yellow;
 }
