--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -19,7 +19,6 @@
 	-ms-user-select: none; /* Internet Explorer/Edge */
 	user-select: none;
 	position: relative;
-	z-index: 2 !important;
 }
 
 .gameboy__inner__shell {
@@ -35,8 +34,8 @@
 	flex-direction: column;
 	align-items: center;
 	border: 3px groove rgb(184, 175, 175);
+
 	position: relative;
-	z-index: 2 !important;
 }
 
 .gameboy__upperhalf {
@@ -182,13 +181,18 @@
 
 	background: transparent;
 
-	z-index: 1;
+	z-index: 2;
 	margin-right: auto;
 	height: auto;
 	width: 45%;
 }
 .ufo {
 	width: 100%;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
 .start__wrapper {
 	align-self: flex-end;
@@ -498,7 +502,7 @@
 	justify-content: flex-end;
 	align-items: flex-end;
 	background-color: rgb(32, 70, 49);
-	z-index: 2;
+	z-index: 7;
 	width: 100%;
 	height: 25%;
 
@@ -556,6 +560,19 @@
 	height: 75%;
 }
 
+.gameboy__display__top__start__clone {
+	position: absolute;
+	opacity: 0;
+	top: 0px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-start;
+	background: transparent;
+	width: 100%;
+	height: 75%;
+}
+
 .ship__wrapper {
 	position: absolute;
 	left: 50%;
@@ -575,7 +592,7 @@
 	position: absolute;
 	bottom: 0px;
 	background-color: rgb(89, 153, 29);
-	z-index: 2;
+	z-index: 7;
 
 	color: black;
 	width: 100%;
@@ -591,7 +608,7 @@
 
 	width: 100%;
 	height: 100%;
-	background: transparent;
+	background: gray;
 	animation-name: blink;
 	animation-duration: 0.7s;
 	animation-timing-function: step-start;
@@ -609,6 +626,8 @@
 }
 .bullets__wrapper__row1 {
 	position: absolute;
+	z-index: 6 !important;
+	opacity: 0.99;
 	top: 0px;
 	display: flex;
 	justify-content: space-between;
@@ -619,6 +638,7 @@
 }
 .bullets__wrapper__row2 {
 	position: absolute;
+	z-index: 6 !important;
 	top: 0px;
 	display: flex;
 	justify-content: space-between;
@@ -629,6 +649,7 @@
 }
 .bullets__wrapper__row3 {
 	position: absolute;
+	z-index: 6 !important;
 	top: 0px;
 	display: flex;
 	justify-content: space-between;
@@ -639,6 +660,7 @@
 }
 .bullets__wrapper__row4 {
 	position: absolute;
+	z-index: 6 !important;
 	top: 0px;
 	display: flex;
 	justify-content: space-between;
@@ -649,6 +671,7 @@
 }
 .bullets__wrapper__row5 {
 	position: absolute;
+	z-index: 6 !important;
 	top: 0px;
 	display: flex;
 	justify-content: space-between;
@@ -661,20 +684,21 @@
 	margin: 0%;
 	margin-top: 0%;
 	width: 3.33%;
-	background-color: rgb(46, 27, 65);
+	background-color: yellow;
 }
 
 .bullet__right {
 	margin: 0%;
 	margin-top: 0%;
 	width: 3.33%;
-	background-color: rgb(46, 27, 65);
+	background-color: yellow;
 }
 .bullet__middle {
+	z-index: inherit;
 	margin: 0%;
 	margin-top: 0%;
 	width: 3.33%;
-	background-color: rgb(46, 27, 65);
+	background-color: yellow;
 }
 
 @keyframes blink {
