--- a/src/css/GameBoy.css
+++ b/src/css/GameBoy.css
@@ -124,7 +124,7 @@
 	align-items: center;
 	height: 98.8%;
 	width: 99%;
-	background-color: rgb(89, 153, 29);
+	background-color: black;
 	border-width: 2px;
 
 	border-style: solid;
@@ -506,7 +506,7 @@
 	width: 100%;
 	height: 25%;
 
-	-webkit-text-stroke: 0.7px rgb(82, 127, 57); /* width and color */
+	-webkit-text-stroke: 0.7px rgb(239, 243, 237); /* width and color */
 }
 .year {
 	font-size: 2em;
@@ -549,7 +549,6 @@
 }
 .gameboy__display__top__start {
 	position: absolute;
-
 	top: 0px;
 	display: flex;
 	flex-direction: column;
@@ -559,18 +558,23 @@
 	width: 100%;
 	height: 75%;
 }
-
-.gameboy__display__top__start__clone {
+.star__wrapper {
 	position: absolute;
-	opacity: 0;
-	top: 0px;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: flex-start;
-	background: transparent;
+	left: 0px;
 	width: 100%;
-	height: 75%;
+	height: 120%;
+	background: transparent;
+	-webkit-animation: falling 1s linear infinite;
+	animation: falling 1s linear infinite;
+}
+.star {
+	background-color: white;
+	margin: 0 5%;
+	width: 1%;
+	height: 1%;
 }
 
 .ship__wrapper {
@@ -591,7 +595,7 @@
 .gameboy__display__bottom__start {
 	position: absolute;
 	bottom: 0px;
-	background-color: rgb(89, 153, 29);
+	background-color: black;
 	z-index: 7;
 
 	color: black;
@@ -604,11 +608,11 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	color: black;
+	color: white;
 
 	width: 100%;
 	height: 100%;
-	background: gray;
+	background: transparent;
 	animation-name: blink;
 	animation-duration: 0.7s;
 	animation-timing-function: step-start;
@@ -711,6 +715,18 @@
 		opacity: 0;
 	}
 }
+
+@keyframes falling {
+	100% {
+		transform: translateY(100%);
+	}
+}
+@-webkit-keyframes falling {
+	100% {
+		transform: translateY(100%);
+	}
+}
+
 .gameboy__time {
 	display: flex;
 	justify-content: center;
